Se creó con Colab

--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -104,7 +104,7 @@
         "\n",
         "# NOTE: You can safely ignore errors about version incompatibility of\n",
         "# Colab-bundled packages (e.g. xarray, pydantic, etc.)\n",
-        "\n",
+        "#There is an error here\n",
         "!pip install tf-keras==2.15 --quiet\n",
         "!pip install tensorflow==2.15 --quiet\n",
         "!pip install keras==2.15 --quiet"
