Se creó con Colab

--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -1038,16 +1038,18 @@
         "### START CODE HERE ###\n",
         "\n",
         "# Choose a batch size\n",
-        "BATCH_SIZE = 64\n",
+        "BATCH_SIZE = 32\n",
         "\n",
         "# Get the length of the training set\n",
-        "length_of_training_dataset = None\n",
+        "length_of_training_dataset = len(visualization_training_dataset)\n",
         "\n",
         "# Get the length of the validation set\n",
-        "length_of_validation_dataset = None\n",
+        "length_of_validation_dataset = len(visualization_validation_dataset)\n",
         "\n",
         "# Get the steps per epoch (may be a few lines of code)\n",
-        "steps_per_epoch = None\n",
+        "steps_per_epoch = length_of_training_dataset//BATCH_SIZE\n",
+        "if length_of_training_dataset % BATCH_SIZE > 0:\n",
+        "    steps_per_epoch += 1\n",
         "\n",
         "# get the validation steps (per epoch) (may be a few lines of code)\n",
         "validation_steps = length_of_validation_dataset//BATCH_SIZE\n",
@@ -1101,8 +1103,11 @@
         "### YOUR CODE HERE ####\n",
         "\n",
         "# Fit the model, setting the parameters noted in the instructions above.\n",
-        "history = None\n",
-        "\n",
+        "history = model.fit(x=training_dataset,\n",
+        "                    steps_per_epoch=steps_per_epoch,\n",
+        "                    validation_data=validation_dataset,\n",
+        "                    validation_steps=validation_steps,\n",
+        "                    epochs=EPOCHS)\n",
         "### END CODE HERE ###"
       ]
     },
@@ -1286,6 +1291,39 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!sudo apt-get update\n",
+        "!sudo apt-get install python3.7 python3.7-distutils python3-pip\n",
+        "!python3.7 -m pip install --upgrade pip\n",
+        "!python3.7 -m pip install tensorflow==2.8.0"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "gbTa53Wn0HKf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "RtAk8UX9AXZ8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python3.7 -m pip install tensorflow==2.8.0"
+      ],
+      "metadata": {
+        "id": "DJgSNEyI9AY8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "OxpkHjH40s_F"
@@ -1333,6 +1371,18 @@
       "source": [
         "If you didn't get an error above, you can finally convert the model."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf # Import TensorFlow\n",
+        "print(tf.__version__) # Should print '2.8.0'"
+      ],
+      "metadata": {
+        "id": "dsAPieQfACHC"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1387,11 +1437,11 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
