--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -1178,6 +1178,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "So the homework is already solved, I am just having problems to run it in tensorflow 8.0 in order to upload it to coursera. Check this when you are back."
+      ],
+      "metadata": {
+        "id": "tskIitM3tSwQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nmYOJj6qtSjT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1310,6 +1328,17 @@
       "metadata": {
         "id": "RtAk8UX9AXZ8"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tf)"
+      ],
+      "metadata": {
+        "id": "Ull7uGvxrvtA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
