Se creó con Colab

--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -1180,7 +1180,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "So the homework is already solved, I am just having problems to run it in tensorflow 8.0 in order to upload it to coursera. Check this when you are back."
+        "***So the homework is already solved, I am just having problems to run it\n",
+        "in tensorflow 8.0 in order to upload it to coursera. Check this when you are back.***"
       ],
       "metadata": {
         "id": "tskIitM3tSwQ"
