--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -1038,7 +1038,7 @@
         "### START CODE HERE ###\n",
         "\n",
         "# Choose a batch size\n",
-        "BATCH_SIZE = 32\n",
+        "BATCH_SIZE = 64\n",
         "\n",
         "# Get the length of the training set\n",
         "length_of_training_dataset = len(visualization_training_dataset)\n",
@@ -1468,6 +1468,7 @@
       "private_outputs": true,
       "provenance": [],
       "gpuType": "T4",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
