Se creó con Colab

--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -1033,12 +1033,12 @@
       "outputs": [],
       "source": [
         "# You'll train 50 epochs\n",
-        "EPOCHS = 50\n",
+        "EPOCHS = 10\n",
         "\n",
         "### START CODE HERE ###\n",
         "\n",
         "# Choose a batch size\n",
-        "BATCH_SIZE = 64\n",
+        "BATCH_SIZE = 128\n",
         "\n",
         "# Get the length of the training set\n",
         "length_of_training_dataset = len(visualization_training_dataset)\n",
@@ -1084,6 +1084,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "nWmuThwJVHG3"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "BTL8VVAaKXR7"
       },
@@ -1110,6 +1117,16 @@
         "                    epochs=EPOCHS)\n",
         "### END CODE HERE ###"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Since it takes too long. I just run 10 epochs and a big batchsize of 128. The results are of course not the best. But running 50 EPOCHS with a batchsize of 32 takes more than 10 hours***\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xzwBFygwVI8s"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1180,8 +1197,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***So the homework is already solved, I am just having problems to run it\n",
-        "in tensorflow 8.0 in order to upload it to coursera. Check this when you are back.***"
+        "***So the homework is already solved, I am just having problems to run it in tensorflow 8.0 in order to upload it to coursera. Check this when you are back.***\n"
       ],
       "metadata": {
         "id": "tskIitM3tSwQ"
@@ -1286,6 +1302,80 @@
         "\n",
         "First, save the model file in your Colab workspace."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save the model you just trained\n",
+        "model.save(\"birds.keras\")"
+      ],
+      "metadata": {
+        "id": "EUGEEaREWSEA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Please look for birds.keras in the File Explorer on the left and download it. Then, go back to the Coursera classroom and upload it to the My Submissions tab of the Week 1 assignment. Alternatively, you can also use the cell below to download the model."
+      ],
+      "metadata": {
+        "id": "SQjxbryeWYFv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# You can also use this cell as a shortcut for downloading your model\n",
+        "from google.colab import files\n",
+        "files.download(\"birds.keras\")"
+      ],
+      "metadata": {
+        "id": "LAkvqtBWWbXA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I do not know why but now it does not ask you to downgrade tensorflow.\n",
+        "\n",
+        "Now we just download the keras file and everything is fine.\n",
+        "\n",
+        "What is below this cell are the former steps that coursera used to require to upload the file with the right version\n",
+        "\n",
+        ".\n",
+        "\n",
+        "\n",
+        ".\n",
+        "\n",
+        "\n",
+        ".\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1Qp7F0UCWxRF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "MWhin6pjX46t"
+      }
     },
     {
       "cell_type": "code",
