--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -1557,8 +1557,9 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "T4",
+      "gpuType": "A100",
       "toc_visible": true,
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
