Se creó con Colab

--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -104,10 +104,9 @@
         "\n",
         "# NOTE: You can safely ignore errors about version incompatibility of\n",
         "# Colab-bundled packages (e.g. xarray, pydantic, etc.)\n",
-        "#There is an error here\n",
-        "!pip install tf-keras==2.15 --quiet\n",
-        "!pip install tensorflow==2.15 --quiet\n",
-        "!pip install keras==2.15 --quiet"
+        "!pip install tensorflow==2.15.0 --quiet\n",
+        "!pip install keras==2.15.0 --quiet\n",
+        "!pip install tf-keras==2.15.0 --quiet"
       ]
     },
     {
@@ -145,8 +144,80 @@
         "import tensorflow as tf\n",
         "from matplotlib import pyplot as plt\n",
         "import tensorflow_datasets as tfds\n",
-        "import cv2"
+        "import cv2\n",
+        "from tensorflow.keras.models import load_model\n",
+        "from tensorflow.keras.metrics import Precision, Recall"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "print(tf.__version__)"
+      ],
+      "metadata": {
+        "id": "0ZyoMwfpeSRz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "OEc0HQk8esKu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Tzsi-kqMesHe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.callbacks import ModelCheckpoint"
+      ],
+      "metadata": {
+        "id": "RDLKF7-EeXOQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# import the Google Colab GDrive connector\n",
+        "from google.colab import drive\n",
+        "\n",
+        "# mount GDrive inside the Colab notebook\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "6ZHXPbDbLn1-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# create Colab Notebooks directory\n",
+        "notebook_directory = '/content/drive/MyDrive/Colab Notebooks'\n",
+        "if not os.path.exists(notebook_directory): os.makedirs(notebook_directory)\n",
+        "\n",
+        "\n",
+        "# create models sub-directory inside the Colab Notebooks directory\n",
+        "models_directory = '/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes'\n",
+        "if not os.path.exists(models_directory): os.makedirs(models_directory)"
+      ],
+      "metadata": {
+        "id": "42mHa95ZMWxZ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -805,6 +876,9 @@
         "    # 1024 Dense layer, with relu\n",
         "    x = tf.keras.layers.Dense(1024, activation= 'relu')(x)\n",
         "\n",
+        "    # 1024 Dense layer, with relu\n",
+        "    x = tf.keras.layers.Dense(1024, activation= 'relu')(x)\n",
+        "\n",
         "    # 512 Dense layer, with relu\n",
         "    x = tf.keras.layers.Dense(512, activation= 'relu')(x)\n",
         "\n",
@@ -936,7 +1010,8 @@
         "    model = final_model(inputs)\n",
         "\n",
         "    # compile your model\n",
-        "    model.compile(optimizer=tf.keras.optimizers.SGD(momentum=0.9), loss='mse')\n",
+        "    model.compile(optimizer=tf.keras.optimizers.SGD(momentum=0.9), loss='mse',\n",
+        "                  metrics=['accuracy', Precision(), Recall()])\n",
         "\n",
         "    ### END CODE HERE ###\n",
         "\n",
@@ -1101,6 +1176,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Save the model with best validation accuracy (or change to 'val_loss')\n",
+        "checkpoint = ModelCheckpoint(\"best_model.h5\",\n",
+        "                                monitor='val_accuracy',     # or 'val_loss'\n",
+        "                                save_best_only=True,\n",
+        "                                mode='max',                 # use 'min' if monitoring val_loss\n",
+        "                                verbose=1)"
+      ],
+      "metadata": {
+        "id": "PNDFPlBYdT51"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "history = model.fit(x=training_dataset,\n",
+        "                    steps_per_epoch=steps_per_epoch,\n",
+        "                    validation_data=validation_dataset,\n",
+        "                    validation_steps=validation_steps,\n",
+        "                    epochs=EPOCHS,\n",
+        "                    callbacks=[checkpoint_cb])"
+      ],
+      "metadata": {
+        "id": "35P2xqslcwWv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "TTwH_P-ZJ_xx"
@@ -1114,7 +1221,8 @@
         "                    steps_per_epoch=steps_per_epoch,\n",
         "                    validation_data=validation_dataset,\n",
         "                    validation_steps=validation_steps,\n",
-        "                    epochs=EPOCHS)\n",
+        "                    epochs=EPOCHS,\n",
+        "                    callbacks=checkpoint)#saving the best model of the training\n",
         "### END CODE HERE ###"
       ]
     },
@@ -1122,11 +1230,81 @@
       "cell_type": "markdown",
       "source": [
         "***Since it takes too long. I just run 10 epochs and a big batchsize of 128. The results are of course not the best. But running 50 EPOCHS with a batchsize of 32 takes more than 10 hours***\n",
+        "\n",
+        "Reply: Now that we have google colab pro we in principle can run it faster but we should also save the trained parameters in order to not run every time.\n",
         "\n"
       ],
       "metadata": {
         "id": "xzwBFygwVI8s"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(history.history)"
+      ],
+      "metadata": {
+        "id": "1k5648-4rq1r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "history_df = pd.DataFrame(history.history)\n",
+        "history_df.to_csv(\"training_history.csv\", index=False)\n"
+      ],
+      "metadata": {
+        "id": "p71Dl5OJrpdW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "best_model = load_model(\"best_model.h5\")"
+      ],
+      "metadata": {
+        "id": "bfWQAUA_slV7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "best_model = load_model(\"best_model.h5\",custom_objects={'mse': 'mse'})"
+      ],
+      "metadata": {
+        "id": "yrerjod4xkdo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "perdida = best_model.evaluate(validation_dataset, steps=validation_steps)"
+      ],
+      "metadata": {
+        "id": "dyDXTsB4yN86"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plot_metrics(\"loss\", \"Bounding Box Loss\", ylim=0.2)"
+      ],
+      "metadata": {
+        "id": "3lFdMRj-yNSp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1142,6 +1320,17 @@
         "\n",
         "You can now evaluate your trained model's performance by checking its loss value on the validation set."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.evaluate(validation_dataset, steps=validation_steps)"
+      ],
+      "metadata": {
+        "id": "OFHy3m-4tq5r"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
