Se creó con Colab

--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -144,15 +144,24 @@
         "import tensorflow as tf\n",
         "from matplotlib import pyplot as plt\n",
         "import tensorflow_datasets as tfds\n",
-        "import cv2\n",
-        "from tensorflow.keras.models import load_model\n",
-        "from tensorflow.keras.metrics import Precision, Recall"
+        "import cv2"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import load_model\n",
+        "from tensorflow.keras.metrics import Precision, Recall"
+      ],
+      "metadata": {
+        "id": "O5RkBilkeNzc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(tf.__version__)"
       ],
       "metadata": {
@@ -877,7 +886,7 @@
         "    x = tf.keras.layers.Dense(1024, activation= 'relu')(x)\n",
         "\n",
         "    # 1024 Dense layer, with relu\n",
-        "    x = tf.keras.layers.Dense(1024, activation= 'relu')(x)\n",
+        "  #  x = tf.keras.layers.Dense(1024, activation= 'relu')(x)\n",
         "\n",
         "    # 512 Dense layer, with relu\n",
         "    x = tf.keras.layers.Dense(512, activation= 'relu')(x)\n",
@@ -1010,8 +1019,10 @@
         "    model = final_model(inputs)\n",
         "\n",
         "    # compile your model\n",
-        "    model.compile(optimizer=tf.keras.optimizers.SGD(momentum=0.9), loss='mse',\n",
-        "                  metrics=['accuracy', Precision(), Recall()])\n",
+        "    model.compile(optimizer=tf.keras.optimizers.SGD(momentum=0.9), loss = {'bounding_box' : 'mse'\n",
+        "                     },\n",
+        "              metrics = {'bounding_box' : 'mse'\n",
+        "                        })\n",
         "\n",
         "    ### END CODE HERE ###\n",
         "\n",
@@ -1038,6 +1049,7 @@
       "source": [
         "# define your model\n",
         "model = define_and_compile_model()\n",
+        "\n",
         "# print model layers\n",
         "model.summary()"
       ]
@@ -1177,6 +1189,22 @@
     {
       "cell_type": "code",
       "source": [
+        "checkpoint = ModelCheckpoint(\n",
+        "    filepath=\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/my_model_{epoch:02d}.h5\",  # 👈 saves per epoch\n",
+        "    save_freq='epoch',\n",
+        "    save_weights_only=False,  # Set to True if you only want weights\n",
+        "    verbose=1\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "akjcjy9CYitu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Save the model with best validation accuracy (or change to 'val_loss')\n",
         "checkpoint = ModelCheckpoint(\"best_model.h5\",\n",
         "                                monitor='val_accuracy',     # or 'val_loss'\n",
@@ -1193,38 +1221,39 @@
     {
       "cell_type": "code",
       "source": [
+        "# Fit the model, setting the parameters noted in the instructions above.\n",
         "history = model.fit(x=training_dataset,\n",
-        "                    steps_per_epoch=steps_per_epoch,\n",
-        "                    validation_data=validation_dataset,\n",
-        "                    validation_steps=validation_steps,\n",
-        "                    epochs=EPOCHS,\n",
-        "                    callbacks=[checkpoint_cb])"
+        "    steps_per_epoch=steps_per_epoch,\n",
+        "    validation_data=validation_dataset,\n",
+        "    validation_steps=validation_steps,\n",
+        "    epochs=EPOCHS,\n",
+        "    callbacks=[checkpoint]#saving the best model of the training\n",
+        ")\n",
+        "### END CODE HERE ###"
       ],
       "metadata": {
-        "id": "35P2xqslcwWv"
+        "id": "4j0z2BkGZCtx"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TTwH_P-ZJ_xx"
-      },
-      "outputs": [],
       "source": [
-        "### YOUR CODE HERE ####\n",
-        "\n",
         "# Fit the model, setting the parameters noted in the instructions above.\n",
         "history = model.fit(x=training_dataset,\n",
-        "                    steps_per_epoch=steps_per_epoch,\n",
-        "                    validation_data=validation_dataset,\n",
-        "                    validation_steps=validation_steps,\n",
-        "                    epochs=EPOCHS,\n",
-        "                    callbacks=checkpoint)#saving the best model of the training\n",
+        "    steps_per_epoch=steps_per_epoch,\n",
+        "    validation_data=validation_dataset,\n",
+        "    validation_steps=validation_steps,\n",
+        "    epochs=EPOCHS,\n",
+        ")\n",
         "### END CODE HERE ###"
-      ]
+      ],
+      "metadata": {
+        "id": "3gtC5T-mdfSE"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1742,11 +1771,11 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
+    "accelerator": "TPU",
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "A100",
+      "gpuType": "V6E1",
       "toc_visible": true,
       "machine_shape": "hm",
       "include_colab_link": true
