Se creó con Colab

--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -104,9 +104,9 @@
         "\n",
         "# NOTE: You can safely ignore errors about version incompatibility of\n",
         "# Colab-bundled packages (e.g. xarray, pydantic, etc.)\n",
-        "!pip install tensorflow==2.15.0 --quiet\n",
-        "!pip install keras==2.15.0 --quiet\n",
-        "!pip install tf-keras==2.15.0 --quiet"
+        "#!pip install tensorflow==2.15.0 --quiet\n",
+        "#!pip install keras==2.15.0 --quiet\n",
+        "#!pip install tf-keras==2.15.0 --quiet"
       ]
     },
     {
@@ -151,7 +151,8 @@
       "cell_type": "code",
       "source": [
         "from tensorflow.keras.models import load_model\n",
-        "from tensorflow.keras.metrics import Precision, Recall"
+        "from tensorflow.keras.metrics import Precision, Recall\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint"
       ],
       "metadata": {
         "id": "O5RkBilkeNzc"
@@ -183,17 +184,6 @@
       "metadata": {
         "id": "Tzsi-kqMesHe"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from tensorflow.keras.callbacks import ModelCheckpoint"
-      ],
-      "metadata": {
-        "id": "RDLKF7-EeXOQ"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1189,12 +1179,14 @@
     {
       "cell_type": "code",
       "source": [
+        "# We don't need it now\n",
+        "#This is to save  in google drive every model per epoch\n",
         "checkpoint = ModelCheckpoint(\n",
         "    filepath=\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/my_model_{epoch:02d}.h5\",  # 👈 saves per epoch\n",
         "    save_freq='epoch',\n",
         "    save_weights_only=False,  # Set to True if you only want weights\n",
         "    verbose=1\n",
-        ")"
+        ")\n"
       ],
       "metadata": {
         "id": "akjcjy9CYitu"
@@ -1205,7 +1197,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Save the model with best validation accuracy (or change to 'val_loss')\n",
+        "# We don't need it now\n",
+        "#Save the model with best validation accuracy (or change to 'val_loss')\n",
         "checkpoint = ModelCheckpoint(\"best_model.h5\",\n",
         "                                monitor='val_accuracy',     # or 'val_loss'\n",
         "                                save_best_only=True,\n",
@@ -1227,25 +1220,8 @@
         "    validation_data=validation_dataset,\n",
         "    validation_steps=validation_steps,\n",
         "    epochs=EPOCHS,\n",
-        "    callbacks=[checkpoint]#saving the best model of the training\n",
-        ")\n",
-        "### END CODE HERE ###"
-      ],
-      "metadata": {
-        "id": "4j0z2BkGZCtx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Fit the model, setting the parameters noted in the instructions above.\n",
-        "history = model.fit(x=training_dataset,\n",
-        "    steps_per_epoch=steps_per_epoch,\n",
-        "    validation_data=validation_dataset,\n",
-        "    validation_steps=validation_steps,\n",
-        "    epochs=EPOCHS,\n",
+        "#    callbacks=[checkpoint]#saving the best model of the training\n",
+        "\n",
         ")\n",
         "### END CODE HERE ###"
       ],
@@ -1266,74 +1242,6 @@
       "metadata": {
         "id": "xzwBFygwVI8s"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(history.history)"
-      ],
-      "metadata": {
-        "id": "1k5648-4rq1r"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "history_df = pd.DataFrame(history.history)\n",
-        "history_df.to_csv(\"training_history.csv\", index=False)\n"
-      ],
-      "metadata": {
-        "id": "p71Dl5OJrpdW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "best_model = load_model(\"best_model.h5\")"
-      ],
-      "metadata": {
-        "id": "bfWQAUA_slV7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "best_model = load_model(\"best_model.h5\",custom_objects={'mse': 'mse'})"
-      ],
-      "metadata": {
-        "id": "yrerjod4xkdo"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "perdida = best_model.evaluate(validation_dataset, steps=validation_steps)"
-      ],
-      "metadata": {
-        "id": "dyDXTsB4yN86"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "plot_metrics(\"loss\", \"Bounding Box Loss\", ylim=0.2)"
-      ],
-      "metadata": {
-        "id": "3lFdMRj-yNSp"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1420,15 +1328,6 @@
       "metadata": {
         "id": "tskIitM3tSwQ"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "nmYOJj6qtSjT"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1520,6 +1419,21 @@
         "\n",
         "First, save the model file in your Colab workspace."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#we can also save it on Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "model.save(\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/my_model.h5\")"
+      ],
+      "metadata": {
+        "id": "Of3FSrGUkr__"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1768,6 +1682,13 @@
       "source": [
         "**Congratulations on completing this assignment on predicting bounding boxes!**"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "XDLs5qBAfzAi"
+      }
     }
   ],
   "metadata": {
@@ -1775,7 +1696,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "V6E1",
+      "gpuType": "V28",
       "toc_visible": true,
       "machine_shape": "hm",
       "include_colab_link": true
