Se creó con Colab

--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -1180,6 +1180,7 @@
       "cell_type": "code",
       "source": [
         "# We don't need it now\n",
+        "\n",
         "#This is to save  in google drive every model per epoch\n",
         "checkpoint = ModelCheckpoint(\n",
         "    filepath=\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/my_model_{epoch:02d}.h5\",  # 👈 saves per epoch\n",
@@ -1198,6 +1199,7 @@
       "cell_type": "code",
       "source": [
         "# We don't need it now\n",
+        "\n",
         "#Save the model with best validation accuracy (or change to 'val_loss')\n",
         "checkpoint = ModelCheckpoint(\"best_model.h5\",\n",
         "                                monitor='val_accuracy',     # or 'val_loss'\n",
@@ -1371,7 +1373,7 @@
         "\n",
         "#Calculates IOU and reports true positives and false positives based on IOU threshold\n",
         "iou = intersection_over_union(predicted_bboxes, normalized_bboxes)\n",
-        "iou_threshold = 0.5\n",
+        "iou_threshold = 0.45\n",
         "\n",
         "print(\"Number of predictions where iou > threshold(%s): %s\" % (iou_threshold, (iou >= iou_threshold).sum()))\n",
         "print(\"Number of predictions where iou < threshold(%s): %s\" % (iou_threshold, (iou < iou_threshold).sum()))"
@@ -1424,8 +1426,8 @@
       "cell_type": "code",
       "source": [
         "#we can also save it on Drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')\n",
         "\n",
         "model.save(\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/my_model.h5\")"
       ],
@@ -1439,7 +1441,8 @@
       "cell_type": "code",
       "source": [
         "# Save the model you just trained\n",
-        "model.save(\"birds.keras\")"
+        "model.save(\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/birds.keras\")\n",
+        "#model.save(\"birds.keras\")"
       ],
       "metadata": {
         "id": "EUGEEaREWSEA"
@@ -1472,7 +1475,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I do not know why but now it does not ask you to downgrade tensorflow.\n",
+        ":I do not know why but now it does not ask you to downgrade tensorflow.\n",
         "\n",
         "Now we just download the keras file and everything is fine.\n",
         "\n",
@@ -1482,6 +1485,7 @@
         "\n",
         "\n",
         ".\n",
+        "\n",
         "\n",
         "\n",
         ".\n",
@@ -1531,66 +1535,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "!sudo apt-get update\n",
-        "!sudo apt-get install python3.7 python3.7-distutils python3-pip\n",
-        "!python3.7 -m pip install --upgrade pip\n",
-        "!python3.7 -m pip install tensorflow==2.8.0"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "gbTa53Wn0HKf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [],
       "metadata": {
         "id": "RtAk8UX9AXZ8"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(tf)"
-      ],
-      "metadata": {
-        "id": "Ull7uGvxrvtA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python3.7 -m pip install tensorflow==2.8.0"
-      ],
-      "metadata": {
-        "id": "DJgSNEyI9AY8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "OxpkHjH40s_F"
-      },
-      "outputs": [],
-      "source": [
-        "# Install packages for compatibility with the autograder\n",
-        "\n",
-        "# NOTE: You can safely ignore errors about version incompatibility of\n",
-        "# Colab-bundled packages (e.g. xarray, pydantic, etc.)\n",
-        "\n",
-        "!pip install tensorflow==2.8.0 --quiet\n",
-        "!pip install keras==2.8.0 --quiet\n",
-        "!pip install protobuf==3.20.*"
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1692,11 +1641,11 @@
     }
   ],
   "metadata": {
-    "accelerator": "TPU",
+    "accelerator": "GPU",
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "V28",
+      "gpuType": "T4",
       "toc_visible": true,
       "machine_shape": "hm",
       "include_colab_link": true
