Se creó con Colab

--- a/c3w1_assignment.ipynb
+++ b/c3w1_assignment.ipynb
@@ -1235,18 +1235,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "***Since it takes too long. I just run 10 epochs and a big batchsize of 128. The results are of course not the best. But running 50 EPOCHS with a batchsize of 32 takes more than 10 hours***\n",
-        "\n",
-        "Reply: Now that we have google colab pro we in principle can run it faster but we should also save the trained parameters in order to not run every time.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "xzwBFygwVI8s"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "-aBzmycIsO8w"
       },
@@ -1321,15 +1309,6 @@
         "- Predict on the validation set of images.\n",
         "- Apply the `intersection_over_union` on these predicted bounding boxes."
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "***So the homework is already solved, I am just having problems to run it in tensorflow 8.0 in order to upload it to coursera. Check this when you are back.***\n"
-      ],
-      "metadata": {
-        "id": "tskIitM3tSwQ"
-      }
     },
     {
       "cell_type": "code",
@@ -1426,10 +1405,8 @@
       "cell_type": "code",
       "source": [
         "#we can also save it on Drive\n",
-        "#from google.colab import drive\n",
-        "#drive.mount('/content/drive')\n",
         "\n",
-        "model.save(\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/my_model.h5\")"
+        "model.save(\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/my_model.h5\") #we save only the h5 script"
       ],
       "metadata": {
         "id": "Of3FSrGUkr__"
@@ -1441,7 +1418,7 @@
       "cell_type": "code",
       "source": [
         "# Save the model you just trained\n",
-        "model.save(\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/birds.keras\")\n",
+        "model.save(\"/content/drive/MyDrive/Colab Notebooks/models_bounding_boxes/birds.keras\") #bird keras contains h5 script and other scripts too\n",
         "#model.save(\"birds.keras\")"
       ],
       "metadata": {
@@ -1458,147 +1435,6 @@
       "metadata": {
         "id": "SQjxbryeWYFv"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# You can also use this cell as a shortcut for downloading your model\n",
-        "from google.colab import files\n",
-        "files.download(\"birds.keras\")"
-      ],
-      "metadata": {
-        "id": "LAkvqtBWWbXA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        ":I do not know why but now it does not ask you to downgrade tensorflow.\n",
-        "\n",
-        "Now we just download the keras file and everything is fine.\n",
-        "\n",
-        "What is below this cell are the former steps that coursera used to require to upload the file with the right version\n",
-        "\n",
-        ".\n",
-        "\n",
-        "\n",
-        ".\n",
-        "\n",
-        "\n",
-        "\n",
-        ".\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "1Qp7F0UCWxRF"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "MWhin6pjX46t"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ULCfGHEKkaO0"
-      },
-      "outputs": [],
-      "source": [
-        "# Save the model you just trained\n",
-        "model.save(\"temp_model.h5\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "SuUoVmXBZYqc"
-      },
-      "source": [
-        "Tensorflow releases minor and patch updates every few months ([sometimes quicker](https://pypi.org/project/tensorflow/#history)). Oftentimes, the code and syntax won't change but the newer versions will have a different model definition under the hood. The next cells will convert your newer model to one that the grader can read. You won't have to do this in your personal projects. This is just an extra step for grading."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "RtAk8UX9AXZ8"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bQf0BVmsXIAM"
-      },
-      "source": [
-        "Wait for the cell above to complete. After that, **go to `Runtime > Restart Session` and wait for the kernel to reconnect.** This is necessary so you can reload Tensorflow with the version installed above. Run the next cell to check if you have the correct version. You will get an `AssertionError` if you didn't restart the session."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TEcDAyaNMyW-"
-      },
-      "outputs": [],
-      "source": [
-        "import tensorflow as tf\n",
-        "\n",
-        "# Check if you have the correct Tensorflow version\n",
-        "assert tf.__version__ == '2.8.0', f'You have TF{tf.__version__}. Please install the grader-compatible Tensorflow and select Runtime > Restart Session'"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kaFHTqWufL9F"
-      },
-      "source": [
-        "If you didn't get an error above, you can finally convert the model."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import tensorflow as tf # Import TensorFlow\n",
-        "print(tf.__version__) # Should print '2.8.0'"
-      ],
-      "metadata": {
-        "id": "dsAPieQfACHC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ljeWKuSKYEHE"
-      },
-      "outputs": [],
-      "source": [
-        "# Load the model you saved earlier\n",
-        "model = tf.keras.models.load_model(\"temp_model.h5\", compile=False)\n",
-        "\n",
-        "# Re-save the model with the compatible TF version\n",
-        "model.save(\"birds.h5\")"
-      ]
     },
     {
       "cell_type": "markdown",
